<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      app:srcCompat="@drawable/ic_lovely_laugh"
      />
  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      app:cardCornerRadius="@dimen/dimen_4dp"
      app:cardElevation="@dimen/dimen_2dp"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          android:padding="@dimen/dimen_16dp"
          >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_night"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_weight="1"
            android:text="@string/setting_night"
            android:textColor="@color/textColorDesc"
            />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/setting_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/abc_btn_check_material"
            android:buttonTint="@color/colorAccent"
            />
      </LinearLayout>

      <include layout="@layout/view_line_05" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
        <LinearLayout
            android:id="@+id/setting_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16dp"
            >
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@mipmap/ic_feedback"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dimen_16dp"
              android:layout_marginStart="@dimen/dimen_16dp"
              android:layout_weight="1"
              android:text="@string/setting_feedback"
              android:textColor="@color/textColorDesc"
              />
        </LinearLayout>
        <include layout="@layout/view_line_05" />
        <LinearLayout
            android:id="@+id/setting_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16dp"
            >
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@mipmap/ic_clear_cache"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dimen_16dp"
              android:layout_marginStart="@dimen/dimen_16dp"
              android:layout_weight="1"
              android:text="@string/setting_clear"
              android:textColor="@color/textColorDesc"
              />
          <TextView
              android:id="@+id/setting_clean_size"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="缓存大小：200kb"
              android:textColor="@color/textColorDesc"
              />
        </LinearLayout>
        <include layout="@layout/view_line_05" />
        <LinearLayout
            android:id="@+id/setting_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16dp"
            >
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@mipmap/ic_check_update"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dimen_16dp"
              android:layout_marginStart="@dimen/dimen_16dp"
              android:layout_weight="1"
              android:text="@string/setting_update"
              android:textColor="@color/textColorDesc"
              />
          <TextView
              android:id="@+id/setting_update_version"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/version"
              android:textColor="@color/textColorDesc"
              />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>


</RelativeLayout>